# FERI-programiranje2

naloga 0401/: Artwork.cpp  Artwork.h  CMakeLists.txt  Date.h  Gallery.h  naloga0401.cpp  navodilaSpremeni
naloga0101/: CMakeLists.txt  naloga0101.cpp
naloga0101spremenjena/: CMakeLists.txt  main.cpp
naloga0102/: naloga0102.cpp
naloga0102spremenjena/: CMakeLists.txt  main.cpp
naloga0201/: Artwork.cpp  Artwork.h  CMakeLists.txt  naloga0201.cpp
naloga0202/: CMakeLists.txt  WaterIntake.cpp  WaterIntake.h  main.cpp
naloga0301/: CMakeLists.txt  Time.cpp  Time.h  naloga0301.cpp
naloga0302/: CMakeLists.txt  TextUtility.cpp  TextUtility.h  naloga0302.cpp
naloga0402/: CMakeLists.txt  Conference.cpp  Conference.h  Date.cpp  Date.h  Event.cpp  Event.h  Person.cpp  Person.h  naloga0402.cpp
naloga0501/: Artist.h  Artwork.h  CMakeLists.txt  Gallery.cpp  Painting.cpp  Sculpture.cpp  naloga0501.cpp
naloga0502/: CMakeLists.txt  Device.cpp  Device.h  Light.cpp  Light.h  Phone.cpp  Phone.h  SmartHome.cpp  SmartHome.h  TV.cpp  TV.h  VentilationSystem.cpp  VentilationSystem.h  naloga0502.cpp
naloga0601/: CMakeLists.txt  Canvas.cpp  Canvas.h  Circle.cpp  Circle.h  ColorCode.h  PrintUtility.h  Rectangle.cpp  Rectangle.h  Shape2D.cpp  Shape2D.h  Square.cpp  Square.h  naloga0601.cpp
naloga0701/: Apartement.cpp  Apartement.h  CMakeLists.txt  Monitor.cpp  main.cpp  (+2 more)
naloga1002/: Artist.cpp  Artwork.cpp  Artwork.h  CMakeLists.txt  ComboDevice.h  Copier.h  Gallery.cpp  Gallery.h  Painting.cpp  Painting.h  PrintIfPainting.h  Scanner.h  Sculpture.cpp  Sculpture.h  naloga1002.cpp
(+47 files in other folders)
